--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.datasource.url=jdbc:h2:mem:testdb 
-spring.datasource.username=sa
-spring.datasource.password=
- 
-spring.jpa.show-sql=true 
-spring.jpa.properties.hibernate.format_sql=true
+# Indicação do profile.
+spring.profiles.active=test
