MockEmailService com logger e padrões Strategy e Template method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Indicação do profile.
 spring.profiles.active=test
+
+# E-mail (rementente e destinatário)
+default.sender=vinicius.pascucci1@gmail.com
+default.recipíent=vinicius.pascucci1@gmail.com
