--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- END dependency -->
-		<!-- END dpendency -->
+		
+		<!-- Dependency e-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-mail</artifactId> 
+		</dependency>
+		<!-- END dependency -->
 	</dependencies>
 	<!-- END dependencies -->
 
