Implementando SmtpEmailService com o servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 # Indicação do profile.
-spring.profiles.active=test
+spring.profiles.active=dev
 
 # E-mail (rementente e destinatário)
 default.sender=vinicius.pascucci1@gmail.com
-default.recipíent=vinicius.pascucci1@gmail.com
+default.recipient=vinicius.pascucci1@gmail.com
+
+
+# Configurações de e-mail para enviar pro servidor do Google
+spring.mail.host=smtp.gmail.com
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+
