Enviando email com HTML

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 		   <artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<!-- END dependency -->
+		<!-- Dependency Thymeleaf -->
+		<dependency>     
+			<groupId>org.springframework.boot</groupId>     
+			<artifactId>spring-boot-starter-thymeleaf</artifactId> 
+		</dependency>
+		<!-- END Dependency -->		
 	</dependencies>
 	<!-- END dependencies -->
 
