Criando classe de Configuração de segurança e permitindo perfisde acesso

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Indicação do profile.
-spring.profiles.active=dev
+spring.profiles.active=test
 
 # E-mail (rementente e destinatário)
 default.sender=vinicius.pascucci1@gmail.com
