--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,35 @@
 		   <artifactId>jjwt</artifactId>
 		   <version>0.7.0</version>
 		</dependency>		
-
+		
+		<!-- Swagger2 -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		
+		<!-- Swagger ui -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		
+		<!-- AWS Amazon -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		
+		
 	</dependencies>
 	<!-- END dependencies -->
 
