Usando padrão e nomes para imagem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ aws.secret_access_key=
 s3.bucket=web-spring-mc
 s3.region=sa-east-1
 
+# Prefixo para salvar as imagens do perfil do cliente.
+img.prefix.client.profile=cp
+
 # Configurações de e-mail para enviar pro servidor do Google
 spring.mail.host=smtp.gmail.com
 spring.mail.username=
