--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 			<version>LATEST</version>
 		</dependency>
 		
+		<!-- Ajuste de Imagem: Bônus -->
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
+		
 		
 	</dependencies>
 	<!-- END dependencies -->
