--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ s3.region=sa-east-1
 # Prefixo para salvar as imagens do perfil do cliente.
 img.prefix.client.profile=cp
 
+# Configuração para ajuste da imagem ( padrão: 200 )
+img.profile.size=200
+
 # Configurações de e-mail para enviar pro servidor do Google
 spring.mail.host=smtp.gmail.com
 spring.mail.username=
