Gerando relatorio para Produto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 # Indicação do profile.
-spring.profiles.active=test
+spring.profiles.active=dev
+
+# # Configuração banco de dados MYSQL.
+spring.datasource.url=jdbc:mysql://localhost:3306/db_spring?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+ 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true 
+spring.jpa.properties.hibernate.format_sql=true
 
 # E-mail (rementente e destinatário)
 default.sender=vinicius.pascucci1@gmail.com
