--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Indicação do profile.
-spring.profiles.active=dev
+spring.profiles.active=test
 
 # # Configuração banco de dados MYSQL.
 spring.datasource.url=jdbc:mysql://localhost:3306/db_spring?useTimezone=true&serverTimezone=UTC
