Aumento tamanho de Upload de Imagem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,10 @@ img.prefix.client.profile=cp
 # Configuração para ajuste da imagem ( padrão: 200 )
 img.profile.size=200
 
+# Aumento tamanho de Upload de imagens
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # Configurações de e-mail para enviar pro servidor do Google
 spring.mail.host=smtp.gmail.com
 spring.mail.username=
