Consolidando o envio de email em formato HTML ( de uma outra branch )

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,12 @@
 			<artifactId>spring-data-rest-hal-browser</artifactId>
 		</dependency>
 		
+		<!-- Dependencia Thymeleaf -->
+		<dependency>
+			 <groupId>org.springframework.boot</groupId>
+			 <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>		
+		
 	</dependencies>
 	<!-- END dependencies -->
 
