--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,5 @@
-# Indicação do profile.
-spring.profiles.active=dev
-
-# # Configuração banco de dados MYSQL.
-spring.datasource.url=jdbc:mysql://localhost:3306/db_spring?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
- 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true 
-spring.jpa.properties.hibernate.format_sql=true
+	# Indicação do profile.
+spring.profiles.active=test
 
 # E-mail (rementente e destinatário)
 default.sender=vinicius.pascucci1@gmail.com
@@ -35,17 +26,6 @@ img.profile.size=200
 # Aumento tamanho de Upload de imagens
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-# Configurações de e-mail para enviar pro servidor do Google
-spring.mail.host=smtp.gmail.com
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.enable=true
 
 
 
